--- a/Css/To-do.css
+++ b/Css/To-do.css
@@ -7,17 +7,19 @@
 
 /*Display of Tasks*/
 .to-dolist {
-  max-width: 800px;
-  width: 50%;
+  max-width:50vw;
   margin-left:10%;
   flex: 1 1 0%;
   padding: 10px;
 }
 
 .taskdisplay {
+  flex: 1 1 0%;
   display: flex;
-  justify-content: space-evenly;
-  padding: 5px;
+  justify-content: space-around;
+  padding: 10px;
+  border-bottom: 1px lightcyan;
+
 }
 
 .task{
@@ -46,26 +48,58 @@
 }
 
 .content {
+  max-width:50vw;
+  margin-left:50%;
   flex: 1 1 0%;
   padding: 10px;
   border-radius: 1rem;
   background: none;
-  color: rgb(3, 3, 3);
   border: 0.5px solid black;
-  padding-left: 10px;
   margin-top: 10px;
+
+}
+
+@media screen and (max-width : 650px ) {
+  .content{
+  max-width:50vw;
+  margin-left:25%;
+  flex: 1 1 0%;
+  padding: 10px;
+  border-radius: 1rem;
+  background: none;
+  border: 0.5px solid black;
+  margin-top: 10px;
+  }
 }
 
 .text{
-  color: rgb(248, 242, 242);
+  color: rgb(255, 255, 255);
   font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
-  border: none;
   background-color: transparent;
+  width: 65vh;
+  transition: color;
+  transition-duration: 2s;
+  transition-timing-function: ease-out;
+  transition-delay: 1s;
+}
+
+input .type {
+  transition: color;
+  transition-duration: 2s;
+  transition-timing-function: ease-out;
+  transition-delay: 1s;
+}
+
+input .type:hover{
+  color: rgb(0, 0, 0);
 }
 
 input{
   width:80%;
+  border:none;
+  outline: none;
+  justify-content: center;
 }
 
 
@@ -108,7 +142,7 @@ button {
 /*General*/
 
 body {
-  background-color: rgb(37, 192, 192);
+  background-color: rgb(12, 107, 107);
   display: flex;
   flex-direction: column;
   min-width: 100vh;
@@ -120,7 +154,6 @@ h2 {
     font-weight: 10;
     margin-bottom: 1rem;
     color: white;
-    margin-left: 10px;
 }
 
 h1 {
@@ -137,6 +170,7 @@ header {
   width: 100%;
   margin: 0 auto;
 }
+
 
 
 
