--- a/Css/To-do.css
+++ b/Css/To-do.css
@@ -47,6 +47,29 @@
    color: rgb(177, 174, 174);
 }
 
+.controls{
+  display: flex;
+  justify-content: space-between;
+  max-width:70vw;
+  margin-left:15%;
+  padding: 10px;
+  font-size: 20px;
+  border-bottom: 1px solid white;
+}
+
+span{
+  padding:20px;
+  margin-right: 10px;
+  margin-left: -35px;
+  cursor: pointer;
+}
+
+.clearbtn{
+border:none;
+padding: 5px;
+background-color: cadetblue;
+}
+
 .content {
   max-width:50vw;
   margin-left:50%;
@@ -84,6 +107,18 @@
   transition-delay: 1s;
 }
 
+#date{
+
+border: 1px black solid;
+border-radius: 50px;
+background-color: white;
+color: black;
+}
+
+/*
+
+HOVER EFFECT
+
 input .type {
   transition: color;
   transition-duration: 2s;
@@ -93,7 +128,7 @@ input .type {
 
 input .type:hover{
   color: rgb(0, 0, 0);
-}
+}*/
 
 input{
   width:80%;
