--- a/Css/To-do.css
+++ b/Css/To-do.css
@@ -7,17 +7,18 @@
 
 /*Display of Tasks*/
 .to-dolist {
-  max-width:40vw;
+  max-width: 40vw;
   flex: 1 1 0%;
   padding-left: 10px;
 }
 
 .taskdisplay {
-  margin: auto;
   display: flex;
-  justify-content: space-around;
-  border-bottom: 1px lightcyan;
-  padding-left: 55%;
+  justify-content: space-between;
+  border: 1px solid black;
+  background-color: rgb(182, 175, 175);
+  margin-top: 10px;
+  padding: 5px;
 }
 
 .task{
@@ -32,55 +33,52 @@
 #userinput {
   flex: 1 1 0%;
   padding: 10px;
-  border-radius: 1rem;
-  border-color:white;
-  border-style: solid;
+  border: 1px solid black;
+  border-radius: 20px;
   margin-right: 1rem;
   color: rgb(0, 0, 0);
   font-size: 25px;
-  background-color: none;
 }
 
 #userinput::placeholder {
-   color: rgb(177, 174, 174);
-   text-align: center;
+  color: rgb(177, 174, 174);
+  text-align: center;
 }
 
-.controls{
+.controls {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   font-size: 20px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgb(0, 0, 0);
   margin: auto;
   width: 60vw;
+  color: black;
 }
 
-
-span{
-  padding:10px;
+span {
+  padding: 10px;
   cursor: pointer;
   margin-top: 100px;
 }
 
-.filter span.active{
+.filter span.active {
   color: rgb(12, 57, 141);
 }
 
-.filter .span:first-child{
+.filter .span:first-child {
   margin-left: 0;
 }
 
-.clearbtn{
-border:none;
-border-bottom: 20px;
-padding: px;
-background-color: cadetblue;
-border-radius: 20px;
+.clearbtn {
+  border: none;
+  border-bottom: 20px;
+  padding: 5px;
+  background-color: rgba(38, 141, 110, 0.842);
+  border-radius: 20px;
 }
 
 .content {
-  margin-left:5%;
   flex: 1 1 0%;
   padding: 10px;
   border-radius: 1rem;
@@ -89,23 +87,24 @@ border-radius: 20px;
   margin-top: 10px;
   margin-bottom: 5px;
   text-align: center;
+  margin-right: 30px;
 }
 
-@media screen and (max-width : 650px ) {
-  .content{
-  max-width:50vw;
-  margin-left:25%;
-  flex: 1 1 0%;
-  padding: 10px;
-  border-radius: 1rem;
-  background: none;
-  border: 0.5px solid black;
-  margin-top: 10px;
+@media screen and (max-width: 650px) {
+  .content {
+    max-width: 50vw;
+    margin-left: 25%;
+    flex: 1 1 0%;
+    padding: 10px;
+    border-radius: 1rem;
+    background: none;
+    border: 0.5px solid black;
+    margin-top: 10px;
   }
 }
 
-.text{
-  color: rgb(255, 255, 255);
+.text {
+  color: rgb(0, 0, 0);
   font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: transparent;
@@ -116,37 +115,72 @@ border-radius: 20px;
   text-align: center;
 }
 
-.text:hover{
+.text:hover {
+  color: rgb(255, 250, 250);
+}
+
+#datecal {
+  width: 25%;
+  border: 1px solid black;
+  border-radius: 20px;
+  background-color: white;
   color: black;
+  text-align: center;
+  font-size: 15px;
 }
 
-#datecal{
-width: min-content;
-border: 1px transparent;
-border-radius: 20px;
-background-color: white;
-color: black;
-text-align: center;
+.duedate {
+  font-size: 25px;
+  padding-left: 45px;
+  align-items: center;
 }
 
-.new-task{
-  display:flex;
+@media screen and (max-width: 700px) {
+  #datecal {
+    width: min-content;
+  }
+}
+
+.new-task {
+  display: flex;
   justify-content: space-between;
 }
 
-input{
-  width:50%;
-  border:none;
+@media screen and (max-width: 700px) {
+  .new-task {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+input {
+  width: 60%;
+  border: none;
   outline: none;
 }
 
+@media screen and (min-width: 900px) {
+  input {
+    width: 50%;
+    border: none;
+    outline: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  input {
+    width: 100%;
+    background-color: aqua;
+  }
+}
 
 /*Buttons for task*/
 .actions {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   margin-top: 5px;
-  padding-left: 150%;
+  border: 1px solid black;
 }
 
 button {
@@ -155,46 +189,45 @@ button {
   outline: none;
   border: none;
   font-size: 20px;
-  color: whitesmoke;
+  color: rgb(0, 0, 0);
   padding-top: 10px;
   margin-right: 10px;
 }
 
-#submitbtn{
-    font-weight: 400;
-    cursor: pointer;
-    transition: 0,5s;
-    font-size: 30px;
+#submitbtn {
+  font-weight: 400;
+  cursor: pointer;
+  transition: 0, 5s;
+  font-size: 30px;
 }
 
-.edit{
-    
-    font-weight: 400;
-    cursor: pointer;
-    transition: 0,5s;
+.edit {
+  font-weight: 400;
+  cursor: pointer;
+  transition: 0, 5s;
 }
 
-.delete{
-    
-    font-weight: 400;
-    cursor: pointer;
-    transition: 0,5s;
+.delete {
+  font-weight: 400;
+  cursor: pointer;
+  transition: 0, 5s;
 }
 
 /*General*/
 
 body {
-  background-color: rgb(12, 107, 107);
-  display: flex;
-  flex-direction: column;
-  min-width: 100vh;
-  color: white;
+  background-image: url(../Images/pexels-tirachard-kumtanom-733854.jpg);
+  background-size: 100vw;
+  position:sticky;
+  min-width: 100vw;
+  color: rgb(0, 0, 0);
 }
+
 h1 {
   font-size: 2.5rem;
   font-weight: 10;
   margin-bottom: 1rem;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 header {
@@ -205,23 +238,27 @@ header {
   margin: 0 auto;
 }
 
-main{
+main {
   border: 1px solid black;
   width: 70vw;
+  max-height: 150% ;
+  height: scroll;
   margin: auto;
   border-radius: 20px;
-  background-color: rgb(153, 23, 228);
+  background-color: white;
+  opacity: 70%;
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
+#todoimg {
+  width: 15%;
+  height: 15%;
+  padding: 10px;
+  text-decoration: none;
+}
 
-
-
-
-
-
-
-
-
-
+.todohead {
+  display: flex;
+  justify-content: center;
+}
