--- a/Css/To-do.css
+++ b/Css/To-do.css
@@ -14,9 +14,6 @@
 
 .taskdisplay {
   display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-  background-color: rgb(182, 175, 175);
   margin-top: 10px;
   padding: 5px;
 }
@@ -180,7 +177,7 @@ input {
   flex-direction: column;
   justify-content: space-around;
   margin-top: 5px;
-  border: 1px solid black;
+  margin-left: 20vw;
 }
 
 button {
@@ -189,9 +186,9 @@ button {
   outline: none;
   border: none;
   font-size: 20px;
-  color: rgb(0, 0, 0);
   padding-top: 10px;
   margin-right: 10px;
+ 
 }
 
 #submitbtn {
@@ -204,13 +201,23 @@ button {
 .edit {
   font-weight: 400;
   cursor: pointer;
-  transition: 0, 5s;
+  transition: 0, 5s; 
+  border: solid transparent ;
+  border-radius: 20px;
+  width: 90%;
+  background-color: rgba(67, 70, 70, 0.349);
+  padding: 5px;
 }
 
 .delete {
   font-weight: 400;
   cursor: pointer;
   transition: 0, 5s;
+  border: solid transparent ;
+  border-radius: 20px;
+  width:70;
+  background-color: rgba(67, 70, 70, 0.349);
+  padding: 5px;
 }
 
 /*General*/
