--- a/Css/To-do.css
+++ b/Css/To-do.css
@@ -71,7 +71,7 @@ span {
   border: none;
   border-bottom: 20px;
   padding: 5px;
-  background-color: rgba(38, 141, 110, 0.842);
+  background-color: rgba(94, 214, 154, 0.842);
   border-radius: 20px;
 }
 
@@ -84,7 +84,7 @@ span {
   margin-top: 10px;
   margin-bottom: 5px;
   text-align: center;
-  margin-right: 30px;
+  margin-left: 50px;
 }
 
 @media screen and (max-width: 650px) {
@@ -167,7 +167,6 @@ input {
 @media screen and (max-width: 700px) {
   input {
     width: 100%;
-    background-color: aqua;
   }
 }
 
@@ -205,7 +204,7 @@ button {
   border: solid transparent ;
   border-radius: 20px;
   width: 90%;
-  background-color: rgba(67, 70, 70, 0.349);
+  background-color: rgba(231, 161, 9, 0.726);
   padding: 5px;
 }
 
@@ -216,7 +215,7 @@ button {
   border: solid transparent ;
   border-radius: 20px;
   width:70;
-  background-color: rgba(67, 70, 70, 0.349);
+  background-color: rgba(231, 161, 9, 0.726);
   padding: 5px;
 }
 
