--- a/Css/To-do.css
+++ b/Css/To-do.css
@@ -18,6 +18,12 @@
   padding: 5px;
 }
 
+@media screen and (max-width:500px){
+  .taskdisplay{
+text-align: center;
+  }
+}
+
 .task{
   display: flex;
   flex-direction: column;
@@ -53,6 +59,14 @@
   color: black;
 }
 
+@media screen and (max-width:800px) {
+  .controls{
+    font-size:15px ;
+    padding: 5px;
+
+  }
+}
+
 span {
   padding: 10px;
   cursor: pointer;
@@ -69,10 +83,15 @@ span {
 
 .clearbtn {
   border: none;
-  border-bottom: 20px;
   padding: 5px;
   background-color: rgba(94, 214, 154, 0.842);
   border-radius: 20px;
+}
+@media screen and (max-width:800px) {
+  .clearbtn{
+    font-size: 15px;
+    margin-bottom: 5px;
+  }
 }
 
 .content {
@@ -94,9 +113,21 @@ span {
     flex: 1 1 0%;
     padding: 10px;
     border-radius: 1rem;
-    background: none;
-    border: 0.5px solid black;
     margin-top: 10px;
+  }
+}
+
+@media screen and ( max-width: 550px){
+  .content{
+    max-width: 25vw;
+    margin-left: 10%;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width:490px){
+  .content{
+    font-size: 10px;
   }
 }
 
@@ -104,16 +135,23 @@ span {
   color: rgb(0, 0, 0);
   font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: transparent;
   width: 25vw;
-  transition: color;
-  transition-timing-function: ease-in;
   padding-bottom: 10px;
   text-align: center;
 }
 
-.text:hover {
-  color: rgb(255, 250, 250);
+@media screen and (max-width:490px){
+  .text{
+    max-width: 20vw;
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width:700px) {
+  .text{
+    width: 20vw;
+    font-size: 20px;
+  }
 }
 
 #datecal {
@@ -126,32 +164,37 @@ span {
   font-size: 15px;
 }
 
-.duedate {
-  font-size: 25px;
-  padding-left: 45px;
-  align-items: center;
+@media screen and (max-width: 750px) {
+  #datecal {
+    font-size: 10px;
+    width: 25%;
+    padding: 10px;
+    margin: 5px;
+    justify-content: flex-end;
+  }
 }
 
-@media screen and (max-width: 700px) {
-  #datecal {
-    width: min-content;
+@media screen and (max-width:550px) {
+  #datecal{
+font-size: 15px;
   }
 }
 
 .new-task {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
-@media screen and (max-width: 700px) {
-  .new-task {
-    display: flex;
-    justify-content: space-around;
-  }
+@media screen and (max-width:750px) {
+  .new-task{
+    display:flex;
+    flex-direction:column;
+    text-align: center;
+    }
 }
 
 input {
-  width: 60%;
+  width: 100%;
   border: none;
   outline: none;
 }
@@ -164,12 +207,6 @@ input {
   }
 }
 
-@media screen and (max-width: 700px) {
-  input {
-    width: 100%;
-  }
-}
-
 /*Buttons for task*/
 .actions {
   display: flex;
@@ -179,15 +216,19 @@ input {
   margin-left: 20vw;
 }
 
+@media screen and (max-width:800px) {
+  .actions{
+    margin-left: 15vw;
+  }
+}
+
 button {
   appearance: none;
   background: none;
   outline: none;
   border: none;
-  font-size: 20px;
   padding-top: 10px;
   margin-right: 10px;
- 
 }
 
 #submitbtn {
@@ -195,6 +236,11 @@ button {
   cursor: pointer;
   transition: 0, 5s;
   font-size: 30px;
+}
+@media screen and (max-width:600px) {
+  #submitbtn{
+    font-size: 20px;
+  }
 }
 
 .edit {
@@ -208,6 +254,12 @@ button {
   padding: 5px;
 }
 
+@media screen and (max-width:600px) {
+  .edit{
+    font-size: 15px;
+  }
+}
+
 .delete {
   font-weight: 400;
   cursor: pointer;
@@ -219,10 +271,17 @@ button {
   padding: 5px;
 }
 
+@media screen and (max-width:600px) {
+  .delete{
+    font-size: 15px;
+  }
+}
+
 /*General*/
 
 body {
-  background-image: url(../Images/pexels-tirachard-kumtanom-733854.jpg);
+  flex: 1 1 0%;
+  background-image: url(../Images/background.jpg);
   background-size: 100vw;
   position:sticky;
   min-width: 100vw;
@@ -236,6 +295,17 @@ h1 {
   color: rgb(0, 0, 0);
 }
 
+@media screen and (max-width:650px) {
+  h1{
+    font-size:2rem;
+  }
+}
+@media screen and (max-width:400px) {
+  h1{
+    font-size: 1.7rem;
+  }
+}
+
 header {
   padding: 2rem 1rem;
   text-align: center;
@@ -245,6 +315,7 @@ header {
 }
 
 main {
+  flex: 1 1 0%;
   border: 1px solid black;
   width: 70vw;
   max-height: 150% ;
@@ -258,13 +329,14 @@ main {
 }
 
 #todoimg {
-  width: 15%;
-  height: 15%;
-  padding: 10px;
+  width: 10%;
+  height: 10%;
   text-decoration: none;
+  padding: 5px;
 }
 
 .todohead {
   display: flex;
   justify-content: center;
+  padding: 5px;
 }
